--- a/scss/style.scss
+++ b/scss/style.scss
@@ -334,6 +334,7 @@ header {
         width: 20px;
         background: none;
         border: 3px solid $white;
+        outline: none;
         opacity: 1;
         &.swiper-pagination-bullet-active {
           background: $white;
@@ -611,8 +612,8 @@ header {
   animation-fill-mode: both;
 }
 .animated.fast {
-  -webkit-animation-duration: 500ms;
-  animation-duration: 500ms;
+  -webkit-animation-duration: 300ms;
+  animation-duration: 300ms;
 }
 
 // Small Desktop
@@ -916,13 +917,15 @@ header {
         left: 0;
         width: 100%;
         justify-content: space-between;
+        background: #fff;
         a {
-          width: calc(33.33% - 2px);
+          width: calc(33.33% - 1px);
           border-radius: 0px;
           margin: 0;
         }
       }
       .menu_btn{
+        cursor: default;
         span{
           display: none;
         }
